evidence/week4/task-6-user.txt
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on build directory
    Checking blog-api v0.1.0 (/home/reky/college/integrative-programming/week3/blog-api)
error[E0308]: mismatched types
   --> tests/logging_test.rs:46:28
    |
 46 |     create_test_post(&app, &token, "Smoke Test Post", "Content").await;
    |     ----------------       ^^^^^^ expected `&str`, found `&AuthTokens`
    |     |
    |     arguments to this function are incorrect
    |
    = note: expected reference `&str`
               found reference `&AuthTokens`
note: function defined here
   --> tests/common/mod.rs:174:14
    |
174 | pub async fn create_test_post(app: &TestApp, token: &str, title: &str, content: &str) -> Value {
    |              ^^^^^^^^^^^^^^^^                -----------

For more information about this error, try `rustc --explain E0308`.
error: could not compile `blog-api` (test "logging_test") due to 1 previous error
cargo build (0 crates compiled)
[full output: ~/.local/share/rtk/tee/1776777742_cargo_check.log]
